--- a/projects/stage-0/user-platform/user-web/pom.xml
+++ b/projects/stage-0/user-platform/user-web/pom.xml
@@ -58,10 +58,10 @@
 
         <!-- Hibernate Validator -->
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
-
+<!--
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
@@ -72,7 +72,7 @@
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
             <version>3.0.1-b11</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
